2015-07-14  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-4

	* inst/unitTests/ut_datetime.R (test.nextBusinessDay): added tests

	* man/previousBusinessDay.Rd: updated docs

	* R/functions.R (previousBusinessDay, nextBusinessDay): new
	arguments 'shift' to get the shift-th previous or next business
	day.

2015-06-29  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-3

	* R/functions.R (roundPOSIXt): new argument 'up' for rounding up

	* man/roundPOSIXt.Rd: updated and moved documentation

2015-05-15  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-2

	* man/convertDate.Rd: added documentation

2015-05-12  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-1 -- Initial version