@@ -1,3 +1,7 @@
+2015-10-06  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (reftimestamp): new function; not yet exported
+
 2015-07-14  Enrico Schumann  <es@enricoschumann.net>
 
 	* DESCRIPTION (Version): Version: 0.0-4
